[gd_scene load_steps=9 format=2]

[ext_resource path="res://kisspng-sprite-tower-defense-isometric-graphics-in-video-g-defense-tower-5b288a53b46aa1.910038161529383507739.png" type="Texture" id=1]
[ext_resource path="res://torre.gd" type="Script" id=2]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://BeFunky-photo.png" type="Texture" id=4]
[ext_resource path="res://AnimatedSprite.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.1004, 71.3242 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 47.3933, 70.4602 )

[node name="objeto" type="Node2D"]
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 524288
collision_mask = 524288
script = ExtResource( 3 )

[node name="Button" type="Button" parent="KinematicBody2D"]
margin_left = -41.0
margin_top = -104.0
margin_right = 39.0
margin_bottom = 44.0
button_mask = 7
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D/Button"]
position = Vector2( 89, 103.971 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -2.00006, -27.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
space_override = 1
collision_layer = 1048575
collision_mask = 1048575

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( -2, -29 )
shape = SubResource( 3 )

[connection signal="mouse_entered" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_exited"]
[connection signal="pressed" from="KinematicBody2D/Button" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_shape_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D/Button/AnimatedSprite" method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="area_shape_exited" from="KinematicBody2D/Area2D" to="KinematicBody2D/Button/AnimatedSprite" method="_on_Area2D_area_shape_exited"]
[connection signal="body_shape_exited" from="KinematicBody2D/Area2D" to="KinematicBody2D/Button/AnimatedSprite" method="_on_Area2D_body_shape_exited"]
[connection signal="mouse_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D/Button/AnimatedSprite" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_mouse_exited"]
